--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     </div>
   </header>
 
-<<<<<<< HEAD
   <main class="main">
     <div class="hero-slider">
       <div>
@@ -85,63 +84,19 @@
             строительные
             смеси</h2>
           <a href="#" class="hero-slider__btn btn">Узнать подробнее</a>
-=======
-  <div class="hero-slider">
-    <div>
-      <div class="hero-slider__item-1 hero-slider__item">
-        <h1 class="hero-slider__hero-title">Комплексные поставки
-          цементной продукции</h1>
-        <h3 class="hero-slider__subtitle">Напрямую от производителя</h3>
-        <a href="#" class="hero-slider__btn btn">Обратный звонок</a>
-      </div>
-    </div>
-    <div>
-      <div class="hero-slider__item-2 hero-slider__item">
-        <div class="hero-item-2__content">
-          <img src="img/slider/certificate.jpg" alt="Сертификат дилера" class="hero-item-2__img">
-          <h2 class="hero-slider__title-2">Наша компания является официальным дилером «Евроцемент груп»</h2>
->>>>>>> d5e7fe8b4275c6be8008a1c20f10e2316d6082fb
         </div>
         <a href="#" class="hero-slider__btn btn">Обратный звонок</a>
       </div>
     </div>
-<<<<<<< HEAD
 
     <section class="about-company">
-=======
-    <div>
-      <div class="hero-slider__item-3 hero-slider__item">
-        <h2 class="hero-slider__title">Навальный
-          Цемент</h2>
-        <a href="#" class="hero-slider__btn btn">Узнать подробнее</a>
-      </div>
-    </div>
-    <div>
-      <div class="hero-slider__item-4 hero-slider__item">
-        <h2 class="hero-slider__title">Тарированный
-          Цемент</h2>
-        <a href="#" class="hero-slider__btn btn">Узнать подробнее</a>
-      </div>
-    </div>
-    <div>
-      <div class="hero-slider__item-5 hero-slider__item">
-        <h2 class="hero-slider__title">Сухие
-          строительные
-          смеси</h2>
-        <a href="#" class="hero-slider__btn btn">Узнать подробнее</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- <section class="">
->>>>>>> d5e7fe8b4275c6be8008a1c20f10e2316d6082fb
       <div class="container">
         <div class="about-company__content">
           <img src="img/about-company/company.jpg" alt="Компания" class="about-company__img">
           <div class="about-company__text">
             <h2 class="about-company__title">О Компании</h2>
             <p class="about-company__desc">Наша компания является официальным дилером крупнейшего
-              международного Холдинга «ЕВРОЦЕМЕНТ груп »,
+              международного Холдинга «ЕВРОЦЕМЕНТ груп»,
               лидера по
               производству строительных материалов в России.
               С момента основания ООО «Цемент1» в 2015 году и по настоящее время основным направлением деятельности
@@ -158,11 +113,41 @@
       <img src="img/about-company/bg.svg" alt="Задний фон" class="about-company__bg">
     </section>
 
-<<<<<<< HEAD
+    <section class="goods">
+      <div class="container">
+        <div class="goods__content">
+          <h2 class="goods__title">Широкий ассортимент цемента</h2>
+          <div class="goods-cards">
+            <div class="goods-cards__item">
+              <img src="img/goods/01.jpg" alt="Навальный цемент" class="goods-cards__img">
+              <h3 class="goods-cards__title">Навальный цемент</h3>
+              <a href="#" class="goods-cards__btn btn-o">Узнать подробнее</a>
+            </div>
+            <div class="goods-cards__item">
+              <img src="img/goods/02.jpg" alt="Тарированный цемент" class="goods-cards__img">
+              <h3 class="goods-cards__title"> Тарированный цемент</h3>
+              <a href="#" class="goods-cards__btn btn-o">Узнать подробнее</a>
+            </div>
+            <div class="goods-cards__item">
+              <img src="img/goods/03.jpg" alt="Сухие строительные смеси" class="goods-cards__img">
+              <h3 class="goods-cards__title">Сухие строительные смеси</h3>
+              <a href="#" class="goods-cards__btn btn-o">Узнать подробнее</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
-=======
->>>>>>> d5e7fe8b4275c6be8008a1c20f10e2316d6082fb
+  <!-- <section class="">
+      <div class="container">
+        <div class="__content">
+          <h2 class="__title"></h2>
+        </div>
+      </div>
+    </section> -->
+
   <!-- <section class="">
       <div class="container">
         <div class="__content">
