--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
       </div>
     </section>
 
+    <section class="bonus">
+      <div class="bonus__content">
+        <h2 class="bonus__title">Акции и спецпредложения</h2>
+        <div class="bonus__banner">
+          <img src="img/bonus/banner.jpg" alt="Баннер" class="bonus__img-banner">
+        </div>
+        <div class="bonus__bg">%</div>
+      </div>
+    </section>
+
   </main>
 
   <!-- <section class="">
