Адаптировал под 1400px

--- a/index.html
+++ b/index.html
@@ -148,31 +148,75 @@
       </div>
     </section>
 
+    <section class="request">
+      <div class="container">
+        <div class="request__content">
+          <h2 class="request__title">Оставьте заявку прямо сейчас!</h2>
+          <p class="request__text">И получите расчет сметы с учетом стоимости работ
+            и материалов через <span class="request__text_orange">30 минут</span></p>
+          <a href="#" class="request__btn btn">Обратный звонок</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="container">
+        <div class="features__content">
+          <h2 class="features__title">Преимущества</h2>
+          <div class="features-list">
+            <div class="features-list__item">
+              <div class="features-list__img-wrapper">
+                <img src="img/features/01.svg" alt="Свой транспорт" class="features-list__img">
+              </div>
+              <h3 class="features-list__title">Свой транспорт</h3>
+            </div>
+            <div class="features-list__item">
+              <div class="features-list__img-wrapper">
+                <img src="img/features/02.svg" alt="Качество сервиса" class="features-list__img">
+              </div>
+              <h3 class="features-list__title">Качество сервиса</h3>
+            </div>
+            <div class="features-list__item">
+              <div class="features-list__img-wrapper">
+                <img src="img/features/03.svg" alt="Надёжность и добросовестность" class="features-list__img">
+              </div>
+              <h3 class="features-list__title">Надёжность и добросовестность</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="">
+      <div class="container">
+        <div class="__content">
+          <h2 class="__title"></h2>
+        </div>
+      </div>
+    </section> -->
+
   </main>
 
-  <!-- <section class="">
-      <div class="container">
-        <div class="__content">
-          <h2 class="__title"></h2>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__content">
+        <a href="tel:+74957816233" class="footer__phone">+7(495)781-62-33</a>
+        <address class="footer__address">г.Красногорск,
+          ул.Почтовая, дом 3, пом.8</address>
+        <a href="#" class="footer__btn btn">Связаться</a>
+        <div class="footer__social footer-social">
+          <a href="#" class="footer-social__item"><img src="img/footer/fb.svg" alt="Facebook"
+              class="footer-social__img"></a>
+          <a href="#" class="footer-social__item"><img src="img/footer/ok.svg" alt="Ok" class="footer-social__img"></a>
+          <a href="#" class="footer-social__item"><img src="img/footer/inst.svg" alt="Instagram"
+              class="footer-social__img"></a>
+          <a href="#" class="footer-social__item"><img src="img/footer/vk.svg" alt="VK" class="footer-social__img"></a>
         </div>
       </div>
-    </section> -->
+    </div>
+  </footer>
 
-  <!-- <section class="">
-      <div class="container">
-        <div class="__content">
-          <h2 class="__title"></h2>
-        </div>
-      </div>
-    </section> -->
 
-  <!-- <section class="">
-      <div class="container">
-        <div class="__content">
-          <h2 class="__title"></h2>
-        </div>
-      </div>
-    </section> -->
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
