--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
     <section class="about-company">
       <div class="container">
         <div class="about-company__content">
-          <img src="img/about-company/company.jpg" alt="Компания" class="about-company__img">
+          <div class="about-company__img-wrap">
+            <img src="img/about-company/company.jpg" alt="Компания" class="about-company__img">
+          </div>
           <div class="about-company__text">
             <h2 class="about-company__title">О Компании</h2>
             <p class="about-company__desc">Наша компания является официальным дилером крупнейшего
