Сделал меню и чуть адаптировал

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             </div>
             <a href="#" class="header__btn btn-o">Обратный звонок</a>
           </div>
+          <div class="menu-burger">
+            <span class="menu-burger__line"></span>
+          </div>
         </div>
       </div>
     </div>
